tests/diagnostics/literals/strings/unterminated/expect.txt
# exit: 1
input/main.lang0:2:10: error: unterminated string literal
      x := "abc
           ^
